firebase storage works

--- a/src/app/done-field/done-field.component.html
+++ b/src/app/done-field/done-field.component.html
@@ -2,5 +2,6 @@
     class="custom-small-size custom-indicator" 
     [class.custom-ball-green]="isDone"
     [class.custom-ball-red]="!isDone"
+    (click)="onClick()"
 ></div>
 
