--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -5,6 +5,9 @@
     --item-width: calc(((100vw - 16px) / 2) - (var(--thin-margin) * 2) - 7px); 
     background-color: black;
     
+    --border-radius5: 5px;
+
+    --form-margin: 20px;
     --form-padding: 15px;
     --form-width: calc(100vw - 16px - (2 * var(--form-padding)) - 4px);
     --form-height: 50vh;
@@ -29,12 +32,12 @@ p {
     padding: 0px;
     border-style: solid;
     border-width: 2px;
-    border-radius: 5px;
+    border-radius: var(--border-radius5);
     padding: var(--form-padding);
 }
 
 .custom-border-thin {
-    border-radius: 5px;
+    border-radius: var(--border-radius5);
     border-width: 2px;
     border-style: solid;
 }
@@ -64,4 +67,270 @@ p {
 
 .custom-background-item {
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.custom-delete-on-hover {
+  float: right;
+  display: block;
+  border: solid;
+  border-radius: 2px;
+  border-width: 1px;
+  background-color: rgba(200, 0, 0, 0.8);
+  padding: 0 2px 0 2px;
+}
+
+/*
+Slide Menu
+= = = = = = = = =
+*/
+.side-menu__container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 25;
+}
+
+.side-menu__container-active {
+  pointer-events: auto;
+}
+
+.side-menu__container::before {
+  content: '';
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #0c1066;
+  opacity: 0;
+  transition: opacity 300ms linear;
+  will-change: opacity;
+}
+
+.side-menu__container-active::before {
+  opacity: 0.3;
+}
+
+.slide-menu {
+  box-sizing: border-box;
+  transform: translateX(-103%);
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  height: 100%;
+  width: 80%;
+  max-width: 26rem;
+  background-color: white;
+  box-shadow: 0 0 2rem rgba(0, 0, 255, 0.1);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr 4fr 1fr;
+  grid-gap: 1rem;
+  transition: transform 300ms linear;
+  will-change: transform;
+}
+
+.slide-menu-active {
+  transform: none;
+}
+
+.menu-header {
+  background: linear-gradient(to right, #e27b50, #617ace);
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-areas: "greeting greeting" "image details";
+  box-sizing: border-box;
+  width: 100%;
+  align-content: center;
+  color: white;
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 255, 0.2);
+}
+
+.greeting__text {
+  grid-area: greeting;
+  font-size: 1.25rem;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+  margin-top: 1rem;
+  justify-self: center;
+  align-self: center;
+}
+
+.account-details {
+  grid-area: details;
+  display: flex;
+  flex-flow: column;
+  margin-left: 1rem;
+  align-self: center;
+}
+
+.name__text {
+  font-size: 1.15rem;
+  margin-bottom: 0.5rem;
+}
+
+.email__text {
+  font-size: 0.9rem;
+  letter-spacing: 0.1rem;
+}
+
+.menu-body {
+  display: grid;
+  width: 100%;
+}
+
+.profile-image__container {
+  grid-area: image;
+  margin-right: 0.5rem;
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  align-self: center;
+  margin-left: 2rem;
+}
+
+.profile__image {
+  max-width: 4rem;
+}
+
+
+
+/*
+Slide TaskAdder
+= = = = = = = = =
+*/
+.TaskAdder__container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 25;
+}
+
+.TaskAdder__container-active {
+  pointer-events: auto;
+}
+
+.TaskAdder__container::before {
+  content: '';
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #0c1066;
+  opacity: 0;
+  transition: opacity 300ms linear;
+  will-change: opacity;
+}
+
+.TaskAdder__container-active::before {
+  opacity: 0.3;
+}
+
+.slide-TaskAdder {
+  border-radius: var(--border-radius5);
+  overflow: hidden;
+  box-sizing: border-box;
+  transform: translateY(+100%);
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 0 2rem rgba(0, 0, 255, 0.1);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 1rem;
+  transition: transform 300ms linear;
+  will-change: transform;
+}
+
+.slide-TaskAdder-active {
+  transform: translateY(+30%);
+}
+
+.TaskAdder__color_container {
+  background: linear-gradient(to right, #e27b50, #617ace);
+  display: grid;
+  grid-template-rows: 1fr 3fr 2fr;
+  grid-template-columns: 1fr;
+  grid-template-areas: "greeting";
+  box-sizing: border-box;
+  width: 100%;
+  align-content: center;
+  color: white;
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 255, 0.2);
+}
+
+.TaskAdder__head {
+  grid-area: greeting;
+  font-size: 1.25rem;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+  justify-self: center;
+  align-self: center;
+}
+
+.TaskAdder__form_container {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-areas: "title" "description";
+}
+
+.TaskAdder__form {
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+  grid-template-columns: 1fr;
+  grid-template-areas: "title" "description" "submit";
+}
+
+.TaskAdder-title {
+  grid-area: title;
+  padding: var(--form-padding);
+  margin: 0 var(--form-margin) var(--form-margin) var(--form-margin);
+  border-radius: var(--border-radius5);
+  border: none;
+  font-size: 18px;
+}
+
+.TaskAdder-description {
+  grid-area: description;
+  padding: var(--form-padding);
+  margin: 0 var(--form-margin) var(--form-margin) var(--form-margin);
+  border-radius: var(--border-radius5);
+  border: none;
+  font-size: 18px;
+}
+
+.TaskAdder-submit {
+  grid-area: submit;
+  margin: 0 var(--form-margin) var(--form-margin) var(--form-margin);
+  border-radius: var(--border-radius5);
+  background: linear-gradient(to right, #617ace, #e27b50);
+  border: none;
+  color: white;
+  font-size: 18px;
 }
